--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
   <body id="home">
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top"
+      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Kristian Jefri</a><i class="bi bi-amd text-success"></i>
+        <a class="navbar-brand" href="#">Kristian Jefri</a
+        ><i class="bi bi-amd text-success"></i>
         <button
           class="navbar-toggler"
           type="button"
@@ -70,12 +71,12 @@
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Kristian Jefri Fernando</h1>
-      <p class="lead">Web Developer | Back end | Fullstak Dev | Manager ASS</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <p class="lead">Web Developer | Back end | Front end | Manager ASS</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319" preserveAspectRatio="none">
         <path
-          fill="#ffffff"
+          fill="#8f37b1"
           fill-opacity="1"
-          d="M0,96L34.3,122.7C68.6,149,137,203,206,192C274.3,181,343,107,411,106.7C480,107,549,181,617,186.7C685.7,192,754,128,823,112C891.4,96,960,128,1029,117.3C1097.1,107,1166,53,1234,69.3C1302.9,85,1371,171,1406,213.3L1440,256L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+          d="M0,0L26.7,42.7C53.3,85,107,171,160,181.3C213.3,192,267,128,320,117.3C373.3,107,427,149,480,181.3C533.3,213,587,235,640,229.3C693.3,224,747,192,800,160C853.3,128,907,96,960,69.3C1013.3,43,1067,21,1120,48C1173.3,75,1227,149,1280,170.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
         ></path>
       </svg>
     </section>
@@ -113,15 +114,17 @@
       </div>
     </section>
     <!-- Akhir About -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path
-        fill="#e2edff"
-        fill-opacity="1"
-        d="M0,256L48,256C96,256,192,256,288,224C384,192,480,128,576,117.3C672,107,768,149,864,176C960,203,1056,213,1152,208C1248,203,1344,181,1392,170.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-      ></path>
-    </svg>
+    
+
     <!-- Projects -->
     <section id="projects">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
+        <path
+          fill="#8f37b1"
+          fill-opacity="1"
+          d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"
+        ></path>
+      </svg>
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -206,14 +209,13 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319" preserveAspectRatio="none">
         <path
-          fill="#ffffff"
+          fill="#8f37b1"
           fill-opacity="1"
-          d="M0,256L48,256C96,256,192,256,288,224C384,192,480,128,576,117.3C672,107,768,149,864,176C960,203,1056,213,1152,208C1248,203,1344,181,1392,170.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+          d="M0,0L26.7,42.7C53.3,85,107,171,160,181.3C213.3,192,267,128,320,117.3C373.3,107,427,149,480,181.3C533.3,213,587,235,640,229.3C693.3,224,747,192,800,160C853.3,128,907,96,960,69.3C1013.3,43,1067,21,1120,48C1173.3,75,1227,149,1280,170.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
         ></path>
       </svg>
-    </section>
     <!-- Akhir Projects -->
 
     <!-- Contact -->
@@ -254,21 +256,15 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-        <path
-          fill="#0d6efd"
-          fill-opacity="1"
-          d="M0,192L40,208C80,224,160,256,240,256C320,256,400,224,480,213.3C560,203,640,213,720,229.3C800,245,880,267,960,266.7C1040,267,1120,245,1200,229.3C1280,213,1360,203,1400,197.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319"><path fill="#212529" fill-opacity="1" d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center pb-5">
+    <footer class="bg-dark text-white text-center pb-5">
       <p class="fs-5">
-        &copy; 2025 All rights reserved |
-        Created with <i class="bi bi-heart-pulse-fill text-danger"></i> by
+        &copy; 2025 All rights reserved | Created with
+        <i class="bi bi-heart-pulse-fill text-danger"></i> by
         <a href="https://instagram.com/jefff16_/" class="text-white fw-bold"
           >Kristian Jefri Fernando</a
         >
