--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -72,7 +75,11 @@
       />
       <h1 class="display-4">Kristian Jefri Fernando</h1>
       <p class="lead">Web Developer | Back end | Front end | Manager ASS</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319" preserveAspectRatio="none">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1440 319"
+        preserveAspectRatio="none"
+      >
         <path
           fill="#8f37b1"
           fill-opacity="1"
@@ -84,7 +91,7 @@
 
     <!-- About -->
     <section id="about">
-      <div class="container">
+      <div class="container" data-aos="fade-down">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
@@ -94,9 +101,10 @@
           <div class="col-md-4">
             <p>
               Halo! Saya Kristian Jefri Fernando, seorang Web Developer yang
-              berfokus pada desain web, pengembangan website, fotografi, digital
-              product. Dengan pengalaman lebih dari 4 tahun, saya telah membantu
-              berbagai klien dalam menciptakan solusi inovatif dan berkualitas.
+              berfokus pada desain web, pengembangan website, fotografi dan
+              digital product. Dengan pengalaman lebih dari 4 tahun, saya telah
+              membantu berbagai klien dalam menciptakan solusi inovatif dan
+              berkualitas.
             </p>
           </div>
           <div class="col-md-4">
@@ -114,7 +122,6 @@
       </div>
     </section>
     <!-- Akhir About -->
-    
 
     <!-- Projects -->
     <section id="projects">
@@ -209,13 +216,18 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319" preserveAspectRatio="none">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1440 319"
+        preserveAspectRatio="none"
+      >
         <path
           fill="#8f37b1"
           fill-opacity="1"
           d="M0,0L26.7,42.7C53.3,85,107,171,160,181.3C213.3,192,267,128,320,117.3C373.3,107,427,149,480,181.3C533.3,213,587,235,640,229.3C693.3,224,747,192,800,160C853.3,128,907,96,960,69.3C1013.3,43,1067,21,1120,48C1173.3,75,1227,149,1280,170.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
         ></path>
       </svg>
+    </section>
     <!-- Akhir Projects -->
 
     <!-- Contact -->
@@ -228,9 +240,17 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <div
+              class="alert alert-success alert-dismissible fade show d-none my-alert"
+              role="alert"
+            >
               <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"
+              ></button>
             </div>
             <form name="wpu-contact-form">
               <div class="mb-3">
@@ -255,19 +275,40 @@
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+                <textarea
+                  class="form-control"
+                  id="pesan"
+                  rows="3"
+                  name="pesan"
+                ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">
+                Kirim
+              </button>
 
-              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              <button
+                class="btn btn-primary btn-loading d-none"
+                type="button"
+                disabled
+              >
+                <span
+                  class="spinner-border spinner-border-sm"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
                 Loading...
               </button>
             </form>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319"><path fill="#212529" fill-opacity="1" d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
+        <path
+          fill="#212529"
+          fill-opacity="1"
+          d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- Akhir Contact -->
 
@@ -290,31 +331,40 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbw-enCJBubrN1dZyjgXHoniQKxqpVVcjoppkjYTq-H50oqLQ-zE6G5fUQNXAp8cgpNwBw/exec'
-      const form = document.forms['wpu-contact-form']
-      const btnKirim = document.querySelector('.btn-kirim');
-      const btnLoading = document.querySelector('.btn-loading');
-      const myAlert = document.querySelector('.my-alert')
-    
-      form.addEventListener('submit', e => {
-        e.preventDefault()
-        // Ketika tombol submit di click
-        // tampilkan tombol loading, hilangkan tombol kirim
-        btnLoading.classList.toggle('d-none');
-        btnKirim.classList.toggle('d-none');
-        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then(response => {
-            // tampilkan tombol kirim, hilangkan tombol loading
-            btnLoading.classList.toggle('d-none');
-            btnKirim.classList.toggle('d-none');
-            // tampilkan alert
-            myAlert.classList.toggle('d-none');
-            // reset form
-            form.reset();
-            console.log('Success!', response)})
-      })
-      .catch(error => console.error('Error!', error.message))
+      AOS.init();
+    </script>
+
+    <script>
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbw-enCJBubrN1dZyjgXHoniQKxqpVVcjoppkjYTq-H50oqLQ-zE6G5fUQNXAp8cgpNwBw/exec";
+      const form = document.forms["wpu-contact-form"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form
+        .addEventListener("submit", (e) => {
+          e.preventDefault();
+          // Ketika tombol submit di click
+          // tampilkan tombol loading, hilangkan tombol kirim
+          btnLoading.classList.toggle("d-none");
+          btnKirim.classList.toggle("d-none");
+          fetch(scriptURL, { method: "POST", body: new FormData(form) }).then(
+            (response) => {
+              // tampilkan tombol kirim, hilangkan tombol loading
+              btnLoading.classList.toggle("d-none");
+              btnKirim.classList.toggle("d-none");
+              // tampilkan alert
+              myAlert.classList.toggle("d-none");
+              // reset form
+              form.reset();
+              console.log("Success!", response);
+            }
+          );
+        })
+        .catch((error) => console.error("Error!", error.message));
     </script>
   </body>
 </html>
