--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Kristian Jefri Fernando</h1>
-      <p class="lead">Web Developer | Back end | Front end | Manager ASS</p>
+      <p class="lead"></p>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 1440 319"
@@ -91,14 +91,14 @@
 
     <!-- About -->
     <section id="about">
-      <div class="container" data-aos="fade-down">
+      <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <p>
               Halo! Saya Kristian Jefri Fernando, seorang Web Developer yang
               berfokus pada desain web, pengembangan website, fotografi dan
@@ -107,7 +107,12 @@
               berkualitas.
             </p>
           </div>
-          <div class="col-md-4">
+          <div
+            class="col-md-4"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+            data-aos-delay="50"
+          >
             <p>
               Saya percaya bahwa "desain yang baik harus fungsional dan estetis"
               atau "teknologi harus memudahkan hidup". Oleh karena itu, saya
@@ -140,7 +145,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500">
               <img
                 src="img/projects/img1.jpg"
                 class="card-img-top"
@@ -155,7 +160,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="100"
+            >
               <img
                 src="img/projects/img2.jpg"
                 class="card-img-top"
@@ -170,7 +180,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="200"
+            >
               <img
                 src="img/projects/img3.jpg"
                 class="card-img-top"
@@ -185,7 +200,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="300"
+            >
               <img
                 src="img/projects/img4.jpg"
                 class="card-img-top"
@@ -200,7 +220,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div
+              class="card"
+              data-aos="flip-left"
+              data-aos-duration="500"
+              data-aos-delay="400"
+            >
               <img
                 src="img/projects/img5.jpg"
                 class="card-img-top"
@@ -229,6 +254,129 @@
       </svg>
     </section>
     <!-- Akhir Projects -->
+
+    <!-- Gallery -->
+    <section id="gallery" class="gallery">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
+        <path
+          fill="#8f37b1"
+          fill-opacity="1"
+          d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"
+        ></path>
+      <div class="container">
+        <div class="row">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2>Gallery</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/1.png"
+                alt="Gambar 1"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/2.png"
+                alt="Gambar 2"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/3.png"
+                alt="Gambar 3"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/4.png"
+                alt="Gambar 4"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/5.png"
+                alt="Gambar 5"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/6.png"
+                alt="Gambar 6"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/7.png"
+                alt="Gambar 7"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/8.png"
+                alt="Gambar 8"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/9.png"
+                alt="Gambar 9"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img
+                src="/img/gallery/thumbnail/10.png"
+                alt="Gambar 10"
+                class="img-fluid gallery-img"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1440 319"
+        preserveAspectRatio="none"
+      >
+        <path
+          fill="#8f37b1"
+          fill-opacity="1"
+          d="M0,0L26.7,42.7C53.3,85,107,171,160,181.3C213.3,192,267,128,320,117.3C373.3,107,427,149,480,181.3C533.3,213,587,235,640,229.3C693.3,224,747,192,800,160C853.3,128,907,96,960,69.3C1013.3,43,1067,21,1120,48C1173.3,75,1227,149,1280,170.7C1333.3,192,1387,160,1413,144L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir Gallery -->
 
     <!-- Contact -->
     <section id="contact">
@@ -333,8 +481,27 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      const galleryImage = document.querySelectorAll(".gallery-img");
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+      });
     </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
+  <script>
+    gsap.registerPlugin(TextPlugin);
+    gsap.to('.lead', {duration: 1.5, delay: 1.5, text: 'Web Developer | Back end | Front end | Manager ASS'});
+    gsap.from('.jumbotron img', {duration: 1, y: -100, rotateY: 360, opacity: 0 });
+    gsap.from('.navbar', {duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce'});
+    gsap.from('.display-4', {duration: 1.5, x: -50, opacity: 0, ease: 'bounce', delay: 0.5, ease: 'back'});
+  </script>
 
     <script>
       const scriptURL =
