--- a/index.html
+++ b/index.html
@@ -241,6 +241,56 @@
           </div>
         </div>
       </div>
+      <section id="my-keyboards">
+        <div class="container">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2>My Keyboards</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="keyboard-box">
+                <h4 class="keyboard-name">Keychron</h4>
+                <img
+                  src="img/keyboards/1.png"
+                  alt="Keyboard-Keychron"
+                  class="keyboard-img"
+                />
+                <a href="#" class="btn btn-light keyboard-detail-button"
+                  >Show Details</a
+                >
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="keyboard-box">
+                <h4 class="keyboard-name">HyperX ROW</h4>
+                <img
+                  src="img/keyboards/2.png"
+                  alt="Keyboard-Keychron"
+                  class="keyboard-img"
+                />
+                <a href="#" class="btn btn-light keyboard-detail-button"
+                  >Show Details</a
+                >
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="keyboard-box">
+                <h4 class="keyboard-name">Atom Mizu</h4>
+                <img
+                  src="img/keyboards/3.png"
+                  alt="Keyboard-Keychron"
+                  class="keyboard-img"
+                />
+                <a href="#" class="btn btn-light keyboard-detail-button"
+                  >Show Details</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 1440 319"
@@ -263,6 +313,7 @@
           fill-opacity="1"
           d="M0,128L21.8,117.3C43.6,107,87,85,131,96C174.5,107,218,149,262,165.3C305.5,181,349,171,393,138.7C436.4,107,480,53,524,69.3C567.3,85,611,171,655,181.3C698.2,192,742,128,785,133.3C829.1,139,873,213,916,218.7C960,224,1004,160,1047,154.7C1090.9,149,1135,203,1178,218.7C1221.8,235,1265,213,1309,176C1352.7,139,1396,85,1418,58.7L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"
         ></path>
+      </svg>
       <div class="container">
         <div class="row">
           <div class="row text-center mb-3">
@@ -493,15 +544,36 @@
       });
     </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
-  <script>
-    gsap.registerPlugin(TextPlugin);
-    gsap.to('.lead', {duration: 1.5, delay: 1.5, text: 'Web Developer | Back end | Front end | Manager ASS'});
-    gsap.from('.jumbotron img', {duration: 1, y: -100, rotateY: 360, opacity: 0 });
-    gsap.from('.navbar', {duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce'});
-    gsap.from('.display-4', {duration: 1.5, x: -50, opacity: 0, ease: 'bounce', delay: 0.5, ease: 'back'});
-  </script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", {
+        duration: 1.5,
+        delay: 1.5,
+        text: "Web Developer | Back end | Front end | Manager ASS",
+      });
+      gsap.from(".jumbotron img", {
+        duration: 1,
+        y: -100,
+        rotateY: 360,
+        opacity: 0,
+      });
+      gsap.from(".navbar", {
+        duration: 1.5,
+        y: "-100%",
+        opacity: 0,
+        ease: "bounce",
+      });
+      gsap.from(".display-4", {
+        duration: 1.5,
+        x: -50,
+        opacity: 0,
+        ease: "bounce",
+        delay: 0.5,
+        ease: "back",
+      });
+    </script>
 
     <script>
       const scriptURL =
@@ -533,5 +605,16 @@
         })
         .catch((error) => console.error("Error!", error.message));
     </script>
+
+    <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+      VanillaTilt.init(document.querySelectorAll(".keyboard-box"), {
+        max: 35,
+        speed: 4000,
+        glare: true,
+        gyroscope: true,
+      });
+    </script>
+
   </body>
 </html>
